@@ -9,6 +9,17 @@ import sys
 import zest.releaser.choose
 import utils
 
+from ConfigParser import ConfigParser
+try:
+    from collective.dist import mupload
+    collective_dist = True
+except ImportErrort:
+    collective_dist = False
+
+result = ''
+index_servers = []
+DIST_CONFIG_FILE = '.pypirc'
+    
 logger = logging.getLogger('release')
 
 
@@ -42,7 +53,7 @@ def main(return_tagdir=False):
             sys.exit()
 
     # Check out tag in temp dir
-    if utils.ask("Check out the tag (for tweaks or pypi upload)"):
+    if utils.ask("Check out the tag (for tweaks or pypi/localserver upload)"):
         prefix = '%s-%s-' % (vcs.name, version)
         logger.info("Doing a checkout...")
         tagdir = vcs.prepare_checkout_dir(prefix)
@@ -50,7 +61,24 @@ def main(return_tagdir=False):
         print getoutput(cmd)
         logger.info("Tag checkout placed in %s", tagdir)
 
-        if utils.package_in_pypi(vcs.name):
+
+        rc = os.path.join(os.path.expanduser('~'), DIST_CONFIG_FILE)
+        if collective_dist and os.path.exists(rc):
+            config = ConfigParser()
+            config.read(rc)
+            raw_index_servers = config.get('distutils', 'index-servers')
+            index_servers = [server.strip() for server in raw_index_servers.split('\n')
+                              if server.strip() != '']
+            server = utils.ask_server("Register and upload to which server? ",
+                                       index_servers)
+            if server:
+                print "Registering and uploading to selected server: %s" % server
+                result = getoutput('%s setup.py mregister sdist mupload -r %s'
+                                        % (sys.executable, server))
+
+                    
+        #without collective.dist
+        elif utils.package_in_pypi(vcs.name):
             if utils.ask("We're on PYPI: make an egg of a fresh tag checkout"):
                 os.chdir(tagdir)
                 logger.info("Making egg...")
@@ -59,13 +87,18 @@ def main(return_tagdir=False):
                 if utils.ask("Register and upload to pypi"):
                     result = getoutput(
                         '%s setup.py register sdist upload' % sys.executable)
-                    lines = [line for line in result.split('\n')]
-                    print 'Showing last few lines...'
-                    for line in lines[-5:]:
-                        print line
-        else:
-            logger.info("We're not registered with PyPI.")
+
+            else:
+                logger.info("We're not registered with PyPI.")
+                
+        if result:
+            lines = [line for line in result.split('\n')]
+            print 'Showing last few lines...'
+            for line in lines[-5:]:
+                print line
+                
         os.chdir(original_dir)
         if return_tagdir:
             # At the end, for the benefit of fullrelease.
             return tagdir
+
